@@ -444,9 +444,10 @@ calls.
 
 =item --bbox-unsup
 
-Black box some unsupported language features, currently UDP tables and the
-cmos and tran gate primitives.  This may enable linting the rest of the
-design even when unsupported constructs are present.
+Black box some unsupported language features, currently UDP tables, the
+cmos and tran gate primitives, deassign statements, and mixed edge errors.
+This may enable linting the rest of the design even when unsupported
+constructs are present.
 
 =item --bin I<filename>
 
