@@ -5,6 +5,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 * Verilator 3.891 devel
 
+****  With --bbox-unsup, suppress desassign and mixed edges, bug1120. [Galen Seitz]
+
 ****  Fix internal error on double-for loop unrolling, bug1044. [Jan Egil Ruud]
 
 ****  Fix internal error on unique casez with --assert, bug1117. [Enzo Chi]
